--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   text-align: center;
   background: #FFFFFF;
   /*Убрать коммент, чтобы фон не тянулся*/
-  /*Не совсем понимаю задумку дизайнера...*/
+  /*Не совсем понимаю задумку дизайнера.*/
   /* 
   max-width: 1600px;
   margin: 0 auto;
