--- a/css/style.css
+++ b/css/style.css
@@ -201,9 +201,11 @@ body {
   font-size: 16px;
   line-height: 19px;
   font-weight: 400;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   margin-bottom: 95.5px;
   margin-top: 18.5px;
+  width: 211px;
 }
 /* products */
 
@@ -356,30 +358,85 @@ body {
 .catalog-filter {}
 .catalog-filter-wrap {
   height: 132px;
+  display: flex;
+  align-items: center;
 }
 
 details summary::-webkit-details-marker {
   display: none
 }
-
 details summary {
   display: flex;
   position: relative;
   z-index: 20;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #6F6E6E;
+}
+.catalog-cloth-filter {
+  width: 360px;
+  margin-right: 30px;
+}
+.catalog-filter-heading {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #000000;
+}
+.catalog-filter-img {
+  margin-left: 10px;
+  margin-right: 28px;
 }
 
 /* Каталог фильтр */
+
+/* Каталог смена страницы */
+.products-catalog-pagination {
+  border: 1px solid #EBEBEB;
+  height: 43px;
+  width: 282.91px;
+  display: inline-flex;
+  align-items: center;
+  margin-top: 18px;
+  margin-bottom: 96px;
+}
+.products-catalog-pagination-arrow {
+  padding: 12px 16px;
+  height: 35.5px;
+  border: none;
+  background-color: #FFFFFF;
+}
+.products-catalog-page-number {
+  width: 202.71px;
+  display: flex;
+  justify-content: space-between;
+}
+.products-catalog-page-link {
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19.2px;
+  color: #EBEBEB;
+}
+.products-catalog-page-link-active {
+  color: #EF5B70;
+}
+/* Каталог смена страницы */
 
 /* Страница товара */
 /* Слайдер */
 .product-slider {
   background-color: #F7F7F7;
-  
+  min-height: 777px;
+  min-width: 1140px;
+  display: flex;
+  align-items: center;
 }
 .product-slider-wrap {
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   width: 1140px;
   align-items: center;
   background-color: #F7F7F7;
@@ -390,9 +447,330 @@ details summary {
   background-color: rgba(42, 42, 42, 0.15);
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: column; 
+}
+.product-slider-pagination-right {
+  
 }
 /* Слайдер */
 
-/* Слайдер */
+/* Описание товара */
+.product-description {
+  margin-top: -60px;
+  margin-bottom: 129px;
+  position: relative;
+  z-index: 2;
+}
+.product-description-wrap {
+  background: #FFFFFF;
+  border: 1px solid #F7F7F7;
+  display: flex;
+  flex-direction: column;
+  align-items: center
+}
+.product-description-content {
+  max-width: 641px;
+  margin: 0 auto;
+  border-bottom: 1px solid #EAEAEA;
+  margin-bottom: 65px;
+}
+.product-description-heading-sex {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #F16D7F;
+  margin-top: 64.54px;
+}
+.product-description-heading-deco-line {
+  width: 63px;
+  height: 3.03px;
+  background-color: #EF5B70;
+  display: inline-block;
+}
+.product-description-heading-name {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21.6px;
+  color: #4D4D4D;
+  margin-top: 9px;
+  margin-bottom: 48.41px;
+}
+.product-description-heading-desc {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #5E5E5E;
+  max-width: 555px;
+  display: inline-block;
+}
+.product-description-heading-price {
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 28.8px;
+  color: #EF5B70;
+  margin-bottom: 65.04px;
+  margin-top: 32.27px;
+}
+.product-description-filter {
+  display: flex;
+  margin-bottom: 48.91px;
+}
+
+/* Описание товара */
+
 /* Страница товара */
+
+/* Регистрация */
+.registration {
+  margin-top: 31px;
+  margin-bottom: 96px;
+}
+.registration-wrap {
+  display: flex;
+}
+.registration-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 358.99px;
+  text-align: left;
+}
+.registration-form-heading {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19.2px;
+  margin-top: 33px;
+}
+.registration-form-input {
+  padding-left: 17px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.registration-radio {
+  margin-top: 11px;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13.2px;
+  color: #000000;
+}
+.registration-radio-row {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 20px;
+}
+.registration-radio-style {
+  height: 17px;
+  width: 17px;
+  margin-right: 10px;
+}
+.registration-form-description {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 15.6px;
+  color: #B1B1B1;
+  margin-top: -5px;
+  margin-bottom: 39px;
+}
+.registration-form-button {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #FFFFFF;
+  background-color: #F16D7F;
+  height: 50px;
+  width: 167px;
+  border-style: none;
+}
+.registration-description {
+  max-width: 652px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 28.8px;
+  text-align: left;
+  margin-left: 128px;
+}
+.registration-description-heading {
+  margin-top: 33px;
+  margin-bottom: 22px;
+}
+.registration-description-desc {
+  margin-bottom: 22px;
+}
+.registration-description-list {
+  list-style-type: none;
+}
+.registration-description-list li {
+  margin-bottom: 16px;
+}
+/* Регистрация */
+
+/* Корзина */
+.cart {}
+.cart-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 96px;
+}
+.cart-products {}
+.cart-products-card {
+  display: flex;
+  height: 306px;
+  width: 652px;
+  box-shadow: 20px 15px 20px 4px rgba(33, 33, 33, 0.35);
+  margin-bottom: 40px;
+}
+.cart-products-card-img {
+  height: 306px;
+  width: 262px;
+}
+.cart-products-card-description {
+  width: 262px;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26.4px;
+  color: #575757;
+  text-align: left;
+  margin-left: 31px;
+}
+.cart-products-card-description-heading {
+  font-size: 24px;
+  line-height: 28.8px;
+  color: #222222;
+  margin-bottom: 42px;
+  margin-top: 22px;
+  overflow: hidden;
+  max-height: 58px;
+}
+.cart-products-card-description-pos {
+  margin-bottom: 6px;
+  display: inline-block;
+  overflow: hidden;
+  max-height: 26px;
+  max-width: 70%;
+}
+.cart-products-card-description-price {
+  color: #F16D7F;
+}
+.cart-products-card-description-quantity {
+  display: flex;
+  align-items: center;
+}
+.cart-products-card-description-quantity-number {
+  height: 24.95px;
+  width: 44px;
+  margin-left: 24px;
+  text-align: center;
+}
+.cart-products-card-description-cansel {
+  border: none;
+  background: none;
+  height: 18px;
+  width: 18px;
+  margin-top: 27px;
+  margin-left: 58px;
+}
+
+.cart-products-buttons-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.cart-products-button-style {
+  padding: 16px 39px;
+  border: 1px solid #A4A4A4;
+  background-color: #FFFFFF;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 16.8px;
+  color: #000000;
+}
+
+.cart-description {
+  width: 360px;
+  height: 800px;
+  margin-top: 15px;
+}
+.cart-description-form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 57.5px;
+}
+.cart-description-form-heading {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19.2px;
+  color: #222222;
+  text-align: left;
+  margin-bottom: 20px;
+}
+.cart-description-form-input {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 15.6px;
+  color: #222222;
+  height: 45px;
+  padding-left: 17px;
+  margin-bottom: 20px;
+  border: 1px solid #A4A4A4;
+}
+.cart-description-form-input-ph::placeholder {
+  color: #222222;
+}
+.cart-description-form-button {
+  color: #4A4A4A;
+  padding: 11px 15px;
+  width: 30%;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13.2px;
+  background-color: #FFFFFF;
+  border: 1px solid #A4A4A4;
+}
+
+.cart-description-price-wrap {
+  background-color: #F5F3F3;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cart-description-price-cont {
+  width: 360px;
+}
+.cart-description-price-sub {
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 13.2px;
+  color: #4A4A4A;
+  margin-top: 39px;
+  display: inline-block;
+  margin-right: 34px;
+  margin-bottom: 12px;
+}
+.cart-description-price-tot {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19.2px;
+  color: #222222;
+  display: inline-block;
+  margin-right: 37px;
+}
+.cart-description-price-button-border {
+  width: 275px;
+  height: 1px;
+  background-color: #E5E5E5;
+  margin-top: 21px;
+  margin-bottom: 17px;
+}
+.cart-description-price-button {
+  color: #FFFFFF;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19.2px;
+  background-color: #F16D7F;
+  padding: 15px 35px;
+  width: 275px;
+  border: none;
+  margin-bottom: 42px;
+}
+/* Корзина */
