--- a/css/style.css
+++ b/css/style.css
@@ -44,19 +44,19 @@ body {
   min-height: 75px;
   background: #222222;
 }
-.logo{
+.logo, .account{
   display: flex;
   align-items: center;
 }
 .header-logo {
   margin-right: 41px;
 }
-.account {
-  display: flex;
-  align-items: center;
+.search-button, .main-menu-button{
+  background-color: transparent;
+  border: none;
 }
 .account-img {
-  margin: 0 34px;
+  margin: 0 33px;
 }
 .cart-div {
   position: relative;
@@ -77,31 +77,38 @@ body {
 
 /* promo */
 .promo {
-  background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%); 
+ /* background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%); */
+background-color: #F1E4E6;
 }
 .promo-wrap {
   display: flex;
   align-items: center;
+  background-image:url(../img/promo-man.png) ;
+  background-repeat: no-repeat;
+  background-position: -225px bottom;
+  min-height: 764px;
+  justify-content: flex-end;
+  text-align: left;
   /*background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%);*/
 }
-.promo-wrap-img {
-  margin-left: -226px;
-}
-.promo-heading {
-  padding-left: 16px;
-  margin-left: 64px;
-  border-left: 12px solid #F16D7F;
-  text-align: left;
-}
-.promo-text-heading {
-  color: #222222;
+.promo-title{}
+.promo-title-heading{
   font-weight: 900;
   font-size: 48px;
+  line-height: 40px;
+  color: #222222;
+  border-left: 12px solid #F16D7F;
+  padding-left: 16px;
+  margin-right: 100px;
 }
-.promo-text-desc{
+.promo-title-small{
+  font-weight: bold;
   font-size: 32px;
-  line-height: 39px;
-  font-weight: 700;
+  line-height: 38px;
+  color: #222222;
+}
+.promo-title-pink{
+  color: #F16D7F;
 }
 /* promo */
 
@@ -111,11 +118,18 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 64px;
+  padding-top: 64px;
+  padding-bottom: 66px;
 }
 .categories-card {
   position: relative;
   margin-bottom: 30px;
+  background-color: #C4C4C4;
+  height: 260px;
+}
+.categories-card-long {
+  width: 100%;
+  height: 180px;
 }
 .categories-img {
   display: block;
@@ -152,7 +166,6 @@ body {
   line-height: 36px;
   font-weight: 400;
   margin-bottom: 6px;
-  margin-top: 67px;
 }
 .products-desc {
   color: #9F9F9F;
