--- a/css/style.scss
+++ b/css/style.scss
@@ -1,23 +1,7 @@
-/* Переменные */
-/*
-$main-color: #F16D7F;
-
-@mixin list($margin: 0, $padding: 0) {
-    margin: $margin;
-    padding: $padding;
-    list-style-type: none;
-}
-
-.test {
-    color: #000000;
-    &-1 {
-        display: flex;
-    }
-}
-
 @import "_var.scss";
-*/
-/* Переменные */
+@import "_mixins.scss";
+@import "blocks/_button.scss";
+
 /* main */
 * {
     box-sizing: border-box;
@@ -36,6 +20,7 @@ $main-color: #F16D7F;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
     text-align: center;
+    list-style-type: none;
     background: #FFFFFF;
     /*Убрать коммент, чтобы фон не тянулся*/
     /*Не совсем понимаю задумку дизайнера...*/
@@ -57,51 +42,120 @@ $main-color: #F16D7F;
       margin: -1px;
   }
   /* main */
+/* to test */
+ .totest {
+  background-color: rgb(155, 228, 173);
+}
+.totest-wrap {
+  display: flex;
+  justify-content: space-between;
+  min-height: 45px;
+  background: #a89cf7;
+  font-size: 50px;
+}
+.totest-link {
+ text-decoration: none;
+}
+/* to test */
 
   /* header */
-  .header {
-    background: #222222;
-  }
-  .header-wrap {
+.header {
+  background: #222222;
+  &-wrap {
     display: flex;
     justify-content: space-between;
     min-height: 75px;
     background: #222222;
   }
-  .logo, .account{
+  &-logo {
     display: flex;
     align-items: center;
-    list-style-type: none;
-  }
-  .header-logo {
-    margin-right: 41px;
-  }
-  .account-list {
+    &-img {
+      margin-right: 41px;
+    }
+    &-button {
       display: inline-flex;
+      background-color: transparent;
+      border: none;
+      fill: #E8E8E8;
+       &:hover {
+         fill: $main-color;
+       }
+    }
   }
-  .search-button, .main-menu-button{
+  &-account {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    &-table {
+      display: flex;
+      align-items: center;
+    }
+    &-list {
+      display: inline-flex;
+      &-img {
+        margin: 0 33px;
+      }
+      &-cart {
+        position: relative;
+        &-number {
+          position: absolute;
+          left: 20px;
+          bottom: 17px;
+          color: #FFFFFF;
+          border-radius: 50%;
+          background-color: $main-color;
+          width: 19px;
+          height: 19px;
+        }
+      }
+    }
+  }
+}
+  /*.header-wrap {
+    display: flex;
+    justify-content: space-between;
+    min-height: 75px;
+    background: #222222;
+  }*/
+ /* .logo, .account{
+    display: flex;
+    align-items: center;
+  }*/
+  /*.header-logo {
+    margin-right: 41px;
+  }*/
+  /*.account-list {
+      display: inline-flex;
+  }*/
+ /* .account-list-button {
     background-color: transparent;
     border: none;
-  }
-  .account-img {
+  }*/
+  /*.account-list-button {
+    fill: #E8E8E8;
+    &:hover {
+      fill: $main-color;
+    }
+  }*/
+ /*  .account-img {
     margin: 0 33px;
-  }
-  .cart-div {
+  } */
+ /*  .cart-div {
     position: relative;
     margin-right: 10px;
     display: inline-flex;
-  }
-  .cart-div-img {
+  } */
+  /* .cart-div-img {
     position: absolute;
-    left: 25px;
-    bottom: 21px;
-  }
-  .cart-div-text {
-    position: absolute;
-    left: 30px;
-    bottom: 22px;
+    left: 20px;
+    bottom: 17px;
     color: #FFFFFF;
-  }
+    border-radius: 50%;
+    background-color: $main-color;
+    width: 19px;
+    height: 19px;
+  } */
   /* header */
   
   /* promo */
