--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,8 @@
 @import "_mixins.scss";
 @import "blocks/_button.scss";
 
-/* main */
+/* index index index index index index */
+/* Основа */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -41,550 +42,189 @@
       left: -999999px;
       margin: -1px;
   }
-  /* main */
+/* Основа */
+
 /* to test */
- .totest {
-  background-color: rgb(155, 228, 173);
-}
-.totest-wrap {
-  display: flex;
-  justify-content: space-between;
-  min-height: 45px;
-  background: #a89cf7;
-  font-size: 50px;
-}
-.totest-link {
- text-decoration: none;
-}
+@import "blocks/totest";
 /* to test */
 
-  /* header */
-.header {
-  background: #222222;
-  &-wrap {
-    display: flex;
-    justify-content: space-between;
-    min-height: 75px;
-    background: #222222;
-  }
-  &-logo {
-    display: flex;
-    align-items: center;
-    &-img {
-      margin-right: 41px;
+/* Заплатка для чекбокса */
+@supports(-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type='checkbox'],
+  input[type='radio'] {
+    --active: #275EFE;
+    --active-inner: #fff;
+    --focus: 2px rgba(39, 94, 254, .3);
+    --border: #BBC1E1;
+    --border-hover: #275EFE;
+    --background: #fff;
+    --disabled: #F6F8FF;
+    --disabled-inner: #E1E6F9;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    height: 21px;
+    outline: none;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    margin: 0;
+    cursor: pointer;
+    border: 1px solid var(--bc, var(--border));
+    background: var(--b, var(--background));
+    transition: background .3s, border-color .3s, box-shadow .2s;
+    &:after {
+      content: '';
+      display: block;
+      left: 0;
+      top: 0;
+      position: absolute;
+      transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
     }
-    &-button {
-      display: inline-flex;
-      background-color: transparent;
-      border: none;
-      fill: #E8E8E8;
-       &:hover {
-         fill: $main-color;
-       }
+    &:checked {
+      --b: var(--active);
+      --bc: var(--active);
+      --d-o: .3s;
+      --d-t: .6s;
+      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
     }
-  }
-  &-account {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-    &-table {
-      display: flex;
-      align-items: center;
-    }
-    &-list {
-      display: inline-flex;
-      &-img {
-        margin: 0 33px;
+    &:disabled {
+      --b: var(--disabled);
+      cursor: not-allowed;
+      opacity: .9;
+      &:checked {
+        --b: var(--disabled-inner);
+        --bc: var(--border);
       }
-      &-cart {
-        position: relative;
-        &-number {
-          position: absolute;
-          left: 20px;
-          bottom: 17px;
-          color: #FFFFFF;
-          border-radius: 50%;
-          background-color: $main-color;
-          width: 19px;
-          height: 19px;
+      & + label {
+        cursor: not-allowed;
+      }
+    }
+    &:hover {
+      &:not(:checked) {
+        &:not(:disabled) {
+          --bc: var(--border-hover);
+        }
+      }
+    }
+    &:focus {
+      box-shadow: 0 0 0 var(--focus);
+    }
+    &:not(.switch) {
+      width: 21px;
+      &:after {
+        opacity: var(--o, 0);
+      }
+      &:checked {
+        --o: 1;
+      }
+    }
+    & + label {
+      font-size: 14px;
+      line-height: 21px;
+      display: inline-block;
+      vertical-align: top;
+      cursor: pointer;
+      margin-left: 4px;
+    }
+  }
+  input[type='checkbox'] {
+    &:not(.switch) {
+      border-radius: 7px;
+      &:after {
+        width: 5px;
+        height: 9px;
+        border: 2px solid var(--active-inner);
+        border-top: 0;
+        border-left: 0;
+        left: 7px;
+        top: 4px;
+        transform: rotate(var(--r, 20deg));
+      }
+      &:checked {
+        --r: 43deg;
+      }
+    }
+    &.switch {
+      width: 38px;
+      border-radius: 11px;
+      &:after {
+        left: 2px;
+        top: 2px;
+        border-radius: 50%;
+        width: 15px;
+        height: 15px;
+        background: var(--ab, var(--border));
+        transform: translateX(var(--x, 0));
+      }
+      &:checked {
+        --ab: var(--active-inner);
+        --x: 17px;
+      }
+      &:disabled {
+        &:not(:checked) {
+          &:after {
+            opacity: .6;
+          }
         }
       }
     }
   }
-}
-  /*.header-wrap {
-    display: flex;
-    justify-content: space-between;
-    min-height: 75px;
-    background: #222222;
-  }*/
- /* .logo, .account{
-    display: flex;
-    align-items: center;
-  }*/
-  /*.header-logo {
-    margin-right: 41px;
-  }*/
-  /*.account-list {
-      display: inline-flex;
-  }*/
- /* .account-list-button {
-    background-color: transparent;
-    border: none;
-  }*/
-  /*.account-list-button {
-    fill: #E8E8E8;
-    &:hover {
-      fill: $main-color;
-    }
-  }*/
- /*  .account-img {
-    margin: 0 33px;
-  } */
- /*  .cart-div {
-    position: relative;
-    margin-right: 10px;
-    display: inline-flex;
-  } */
-  /* .cart-div-img {
-    position: absolute;
-    left: 20px;
-    bottom: 17px;
-    color: #FFFFFF;
+  input[type='radio'] {
     border-radius: 50%;
-    background-color: $main-color;
-    width: 19px;
-    height: 19px;
-  } */
-  /* header */
+    &:after {
+      width: 19px;
+      height: 19px;
+      border-radius: 50%;
+      background: var(--active-inner);
+      opacity: 0;
+      transform: scale(var(--s, .7));
+    }
+    &:checked {
+      --s: .5;
+    }
+  }
+}
+/* Заплатка для чекбокса */
+ 
+/* header */
+@import "blocks/header";
+/* header */
   
-  /* promo */
-  .promo {
-   /* background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%); */
-  background-color: #F1E4E6;
-  min-width: 1140px;
-  }
-  .promo-wrap {
-    display: flex;
-    align-items: center;
-    background-image:url(../img/promo-man.png) ;
-    background-repeat: no-repeat;
-    background-position: -225px bottom;
-    min-height: 764px;
-    justify-content: flex-end;
-    text-align: left;
-    /*background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%);*/
-  }
-  .promo-title{
-    font-weight: 900;
-    font-size: 48px;
-    line-height: 40px;
-    color: #222222;
-    border-left: 12px solid #F16D7F;
-    padding-left: 16px;
-    margin-right: 100px;
-  }
+/* promo */
+@import "blocks/promo";
+/* promo */
 
-  .promo-title-small{
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 38px;
-    color: #222222;
-  }
-  .promo-title-pink{
-    color: #F16D7F;
-  }
-  /* promo */
-  .main {
-    flex-grow: 1;
-  }
-  /* categories */
-  .categories {}
-  .сategories-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-top: 64px;
-    padding-bottom: 96px;
-    gap: 30px;
-    list-style-type: none;
-  }
-  .categories-card {
-    background-color: #C4C4C4;
-    height: 260px;
-    width: 360px;   
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-  }
-  .categories-card:nth-child(1){
-    background-image: url(../img/cat-for-w.jpg);
-  }
-  .categories-card:nth-child(2){
-    background-image: url(../img/cat-for-m.jpg);
-  }
-  .categories-card:nth-child(3){
-    background-image: url(../img/cat-for-k.jpg);
-  }
-  .categories-card:last-child {
-    width: 100%;
-    height: 180px;
-    background-image: url(../img/cat-acc.jpg);
-  }
-  .categories-desc {
-    text-decoration: none;  
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  }
-  .categories-name {
-      width: 100%;
-      margin: 0;
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 29px;
-      color: #F16D7F;
-  }
-  .categories-name::first-line {
-      font-size: 16px;
-      line-height: 19px;
-      color: #FFFFFF;
-  }
-  /* categories */
-  
-  /* products */
-  .products {}
-  .products-wrap {
-    /*margin-top: 64px;*/
-  }
-  .products-heading {
-    color: #222222;
-    font-size: 30px;
-    line-height: 36px;
-    font-weight: 400;
-    margin-bottom: 6px;
-  }
-  .products-desc {
-    color: #9F9F9F;
-    font-size: 14px;
-    margin-bottom: 48px;
-  }
-  .products-cont {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 30px;
-  }
-  .products-catalog-card {
-    max-width: 360px;
-    text-align: left;
-    background: #F8F8F8;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .product-catalog-desc-wrap {
-      padding: 18px;
-  }
-  .products-card-heading {
-    font-size: 13px;
-    line-height: 16px;
-    font-weight: 700;
-    max-height: 16px;
-    overflow: hidden;
-  }
-  .products-card-desc {
-    font-size: 14px;
-    font-weight: 300;
-    margin: 12px 0 18px 0;
-    color: #5D5D5D; 
-    overflow: hidden;
-    max-height: 50.4px;
-  }
-  .products-card-price {
-    color: #F16D7F;
-    font-size: 16px;
-    line-height: 19px;
-    font-weight: 400;
-    max-height: 18.4px;
-    overflow: hidden;
-  }
-  .products-catalog-button {
-    text-decoration: none;
-    padding: 14.5px 35.5px;
-    border: 1px solid #FF6A6A;
-    color: #F26376;
-    font-size: 16px;
-    line-height: 19px;
-    font-weight: 400;
-    display: inline-flex;
-    align-items: center;
-    margin-bottom: 95.5px;
-    margin-top: 48px;
-    width: 211px;
-  }
-  .products-catalog-button:hover {
-      color: #FFFFFF;
-      background-color: #FF6A6A;
-  }
-  /* products */
-  
-  /* advantages */
-  .advantages {
-    background: #222224;
-    color: #FBFBFB;
-    font-size: 19.96px;
-    line-height: 24px;
-  }
-  .advantages-wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 341px;
-    background: #222224;
-    padding: 103px 0;
-  }
-  .advantages-card{
-    max-width: 360px;
-  }
-  .advantages-heading {
-    margin-top: 28px;
-    margin-bottom: 16px;
-    font-weight: 400;
-  }
-  .advantages-description {
-    font-weight: 300;
-    font-size: 13.972px;
-    line-height: 17px;
-  }
-  /* advantages */
-  
-  /* feedback */
-  .feedback{
-    background-image: url(../img/feedback-background.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    /*Весьма верояно это кривая заплатка*/
-    min-width: 1140px;
-    background-size: cover;
-    /*Проблемы с масштабом, разрешением, уезжает bgi*/
-  }
-  .feedback-wrap {
-    min-height: 448px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 97px 0;
-  }
-  .feedback-msg {
-    max-width: 359.45px;
-    color: #222224;
-    font-size: 20px;
-    line-height: 24px;
-    font-style: italic;
-  }
-  .feedback-img {
-    margin-bottom: 30px;
-  }
-  .feedback-subscribe {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 557px;
-    padding: 0 30px;
-  }
-  .feedback-subscribe-title {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28.3px;
-    margin-bottom: 32px;
-  }
-  .feedback-subscribe-title::first-line {
-    font-weight: bold;
-    font-size: 24px;
-    max-width: 356px;
-  }
-  .feedback-form {
-    display: flex;
-  }
-  .feedback-mail-form {
-    border-radius: 24.5px 0 0 24.5px;
-    padding: 7px 64px 6px 22px; 
-    border: none;
-    font-size: 14px;
-    line-height: 17px;
-    height: 49px;
-    font-family: 'Lato';
-    width: 256px;
-    background: #E1E1E1;
-  }
-  .feedback-mail-form:focus {
-    outline: none;
-  }
-  .feedback-button-sub {
-    height: 49px;
-    border-radius: 0 24.5px 24.5px 0;
-    background: #F16D7F;
-    border: none;
-    color: #FFFFFF;
-    font-size: 14px;
-    line-height: 17px;
-    width: 100px;
-    font-family: 'Lato';
-  }
-  .feedback-button-sub:focus {
-    outline: none;
-  }
-  /* feedback */
-  
-  /* Футер */
-  .footer {
-    background-color: #222224;
-    color: #FBFBFB;
-    font-size: 16px;
-    line-height: 19px;
-  }
-  .footer-wrap {
-    display: flex;
-    justify-content: space-between;
-    min-height: 79px;
-    align-items: center;
-    background: #222224;
-    padding: 21px 0;
-  }
-  .social-networks {
-    display: flex;
-    list-style-type: none;
-    gap: 7px;
-  }
+.main {
+  flex-grow: 1;
+}
 
-  .social-link {
-    display: flex;
-    height: 32px;
-    width: 32px;
-    color:#000000 ;
-    background-color: #FFFFFF;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-  }
+/* categories */
+@import "blocks/categories";
+/* categories */
+  
+/* products */
+@import "blocks/products";
+/* products */
+  
+/* advantages */
+@import "blocks/advantages";
+/* advantages */
+  
+/* feedback */
+@import "blocks/feedback";
+/* feedback */
+  
+/* Футер */
+@import "blocks/footer";
+/* Футер */
+  
+/* index index index index index index */ 
 
-  .social-link:hover {
-      background-color: #F16D7F ;
-      color: #FFFFFF;
-  }
-
+/* catalog catalog catalog catalog catalog */
+  @import "blocks/catalog-heading-nav"; 
+  @import "blocks/catalog-filter";
+/* catalog catalog catalog catalog catalog */
   
-  /* Футер */
-  
-  /* Каталог */
-  .catalog-headings-links{
-    background-color: #F8F3F4;
-  }
-  .catalog-wrap{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 148px;
-    background-color: #F8F3F4;
-  }
-  .catalog-heading{
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28.8px;
-    color: #F16D7F;
-  }
-  .catalog-links{
-    list-style-type: none;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 16.8px;
-  }
-  .catalog-links-pos {
-    display: inline;
-  }
-  .catalog-links-style{
-    text-decoration: none;
-    color: #636363;
-  }
-  /* Каталог */
-  
-  /* Каталог фильтр */
-  .catalog-filter {}
-  .catalog-filter-wrap {
-    height: 132px;
-    display: flex;
-    align-items: center;
-  }
-  /*
-  details summary::-webkit-details-marker {
-    display: none
-  }
-  details summary {
-    display: flex;
-    position: relative;
-    z-index: 20;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 16.8px;
-    color: #6F6E6E;
-  }
-  */
-  .catalog-cloth-filter {
-    width: 360px;
-    margin-right: 30px;
-  }
-  .catalog-filter-heading {
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 16.8px;
-    color: #000000;
-  }
-  .catalog-filter-img {
-    margin-left: 10px;
-    margin-right: 28px;
-  }
-  
-  /* Каталог фильтр */
-  
-  /* Каталог смена страницы */
-  .products-catalog-pagination {
-    border: 1px solid #EBEBEB;
-    height: 43px;
-    width: 282.91px;
-    display: inline-flex;
-    align-items: center;
-    margin-top: 18px;
-    margin-bottom: 96px;
-  }
-  .products-catalog-pagination-arrow {
-    padding: 12px 16px;
-    height: 35.5px;
-    border: none;
-    background-color: #FFFFFF;
-  }
-  .products-catalog-page-number {
-    width: 202.71px;
-    display: flex;
-    justify-content: space-between;
-  }
-  .products-catalog-page-link {
-    text-decoration: none;
-    font-weight: 300;
-    font-size: 16px;
-    line-height: 19.2px;
-    color: #EBEBEB;
-  }
-  .products-catalog-page-link-active {
-    color: #EF5B70;
-  }
-  /* Каталог смена страницы */
   
   /* Страница товара */
   /* Слайдер */
@@ -606,14 +246,69 @@
   .product-slider-pagination {
     height: 47px;
     width: 47px;
-    background-color: rgba(42, 42, 42, 0.15);
+    /* background-color: rgba(42, 42, 42, 0.15); */
     display: flex;
     justify-content: center;
     flex-direction: column; 
-  }
-  .product-slider-pagination-right {
     
   }
+  .product-slider-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(42, 42, 42, 0.15);
+    border: none;
+    cursor: pointer;
+    height: 100%;
+    &:hover {
+      -webkit-animation: flip-scale-down-hor 0.5s linear both;
+	        animation: flip-scale-down-hor 0.5s linear both;
+      .product-slider-button-img {
+        fill: $main-color;
+      }
+    }
+  }
+  .product-cat-corr {
+    margin-bottom: 128px;
+  }
+
+  
+/* anim from site */
+.flip-scale-down-hor {
+	-webkit-animation: flip-scale-down-hor 0.5s linear both;
+	        animation: flip-scale-down-hor 0.5s linear both;
+}
+@-webkit-keyframes flip-scale-down-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+            transform: scale(1) rotateX(0);
+  }
+  50% {
+    -webkit-transform: scale(0.4) rotateX(90deg);
+            transform: scale(0.4) rotateX(90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(180deg);
+            transform: scale(1) rotateX(180deg);
+  }
+}
+@keyframes flip-scale-down-hor {
+  0% {
+    -webkit-transform: scale(1) rotateX(0);
+            transform: scale(1) rotateX(0);
+  }
+  50% {
+    -webkit-transform: scale(0.4) rotateX(90deg);
+            transform: scale(0.4) rotateX(90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateX(180deg);
+            transform: scale(1) rotateX(180deg);
+  }
+}
+
+/* anim from site */
+
   /* Слайдер */
   
   /* Описание товара */
@@ -675,7 +370,8 @@
   }
   .product-description-filter {
     display: flex;
-    margin-bottom: 48.91px;
+    width: 100%;
+    justify-content: center;
   }
   
   /* Описание товара */
