--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ body {
   -webkit-animation: gradient 15s ease infinite;
           animation: gradient 15s ease infinite;
   font-size: 50px;
-  /* display: none; */
+  display: none; 
 }
 
 .totest-wrap {
