--- a/css/blocks/_catalog-filter.scss
+++ b/css/blocks/_catalog-filter.scss
@@ -17,11 +17,13 @@ details summary::-webkit-details-marker {
  /* background-color: #a9bee4; */
 }
 .filter-det {
+  margin-top: -10px;
  text-align: left;
  position: relative;
  cursor: pointer;
- width: 360px;
+ /* width: 360px; */
  background-color: #FFFFFF;
+ /* transition: 1s ease-in-out all; */
  &:hover {
    color: $main-color;
    .filter-img {
@@ -30,24 +32,38 @@ details summary::-webkit-details-marker {
  }
 }
 .filter-det[open] {
+  width: 360px;
+  animation: filter-anim 1s ease-in-out !important;
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
   z-index: 20;
   color: $main-color;
   .filter-img {
     fill: $main-color;
   }
+  & summary ~ * {
+    animation: filter-anim 0.5s ease-in-out !important;
+  }
 }
-
+@keyframes filter-anim {
+  0%    {opacity: 0;}
+  100%  {opacity: 1;}
+}
 .filter-summ-heading {
+  transition: 1s ease-in-out all;
   border: none;
   margin: 0;
   padding: 10px 0 0 10px;
-  display: block;
+  display: flex;
+  align-items: center;
   background-color: #FFFFFF;
   position: relative;
   z-index: 20; 
   font-weight: 600;
   line-height: 16.8px;
+  & > svg {
+    margin-left: 10px;
+    transition: 1s ease-in-out all;
+  }
 }
 
 .filter-list {
@@ -59,6 +75,11 @@ details summary::-webkit-details-marker {
   line-height: 16.8px;
   color: #6F6E6E;
   padding: 6px 6px 6px 30px;
+  transition: 1s ease-in-out all;
+  &:hover {
+    color: $main-color;
+    transform: translateX(10px);
+  }
 }
 .filter-list-shadow {
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
@@ -82,8 +103,10 @@ details summary::-webkit-details-marker {
   border-bottom: 1px solid #EBEBEB;
   display: flex;
   align-items: center;
+  transition: 1s ease-in-out all;
   &:hover {
     color: $main-color;
+    transform: translateX(8px);
   }
 }
 
@@ -99,11 +122,13 @@ details summary::-webkit-details-marker {
  /*  display: block;
   display: flex;
   align-items: center; */
+  margin-right: 28px;
   color: #6F6E6E;
   font-weight: 400;
   line-height: 16.8px;
   position: relative;
   cursor: pointer;
+  /* transition: 1s ease-in-out all; */
   &:hover {
     color: $main-color;
     .filter-arrow-img {
@@ -111,6 +136,11 @@ details summary::-webkit-details-marker {
     }
   }
   &[open] {
+    padding-right: 28px;
+    margin-right: 0px;
+    & summary ~ * {
+      animation: filter-anim 0.5s ease-in-out;
+    }
     color: $main-color;
     .filter-arrow-img {
       fill: $main-color;
@@ -120,15 +150,17 @@ details summary::-webkit-details-marker {
 .filter-button-summ {
   display: flex;
   align-items: center;
+  transition: 1s ease-in-out all;
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 .filter-arrow-img {
   fill: #6F6E6E;
   margin-top: 2px;
-  margin-right: 28px;
+  /* margin-right: 28px; */
   margin-left: 11px;
-  &-corr {
-    margin-right: 0px;
-  }
+  transition: 1s ease-in-out all;
 }
 .filter-drop-check {
   min-width: 79px;
@@ -136,6 +168,7 @@ details summary::-webkit-details-marker {
   text-align: left;
   margin-top: 5px;
   margin-left: -9px;
+  transition: 1s ease-in-out all;
   &:hover {
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
     z-index: 30;
@@ -147,9 +180,16 @@ details summary::-webkit-details-marker {
   cursor: pointer;
   display: flex;
   align-items: center;
-  /* &:hover {
-    outline: 1px solid $main-color;
-  } */
+  &:hover {
+    .filter-drop-inp {
+      border: 1px solid $main-color !important;
+      transition: 0.5s ease-in-out all !important;
+    }
+    .filter-drop-sp {
+      color: $main-color;
+      transition: 0.5s ease-in-out all !important;
+    }
+  }
 }
 
 .filter-drop-inp {
@@ -172,6 +212,10 @@ details summary::-webkit-details-marker {
 .filter-drop-sp {
   /* max-width: 80%; */
   max-width: calc(100% - 23px);
+/*   &:hover {
+    color: $main-color;
+    transition: 0.3s ease-in-out all;
+  } */
 }
 /* Каталог фильтр */
 
@@ -186,13 +230,15 @@ details summary::-webkit-details-marker {
   margin-bottom: 96px;
 }
 .products-catalog-pagination-arrow {
-  padding: 12px 8px;
-  margin: 0 8px;
+  padding: 8px 4px;
+  margin: 0 11px;
   height: 35.5px;
   border: none;
   background-color: #FFFFFF;
   cursor: pointer;
   &:hover {
+    transition: 1s ease-in-out all;
+    transform: scale(1.2);
     .products-catalog-pagination-arrow-svg {
       fill: $main-color;
     }
@@ -200,6 +246,7 @@ details summary::-webkit-details-marker {
 }
 .products-catalog-pagination-arrow-svg {
   fill: #000000;
+  display: block;
   &:hover {
     fill: $main-color;
   }
@@ -209,6 +256,15 @@ details summary::-webkit-details-marker {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+  & > li {
+    display: flex;
+    align-items: center;
+    & > a:hover {
+      color: $main-color;
+      transition: 1s ease-in-out all;
+      transform: scale(1.3);
+    }
+  }
 }
 .products-catalog-page-link {
   text-decoration: none;
@@ -216,9 +272,9 @@ details summary::-webkit-details-marker {
   font-size: 16px;
   line-height: 19.2px;
   color: #EBEBEB;
-  &:hover {
+ /*  &:hover {
     color: $main-color;
-  }
+  } */
 }
 .products-catalog-page-aft {
   &:last-child::before {
@@ -231,5 +287,6 @@ details summary::-webkit-details-marker {
 }
 .products-catalog-page-link-active {
   color: #EF5B70;
+  transform: scale(1.3);
 }
 /* paggination */
