--- a/css/blocks/_products.scss
+++ b/css/blocks/_products.scss
@@ -1,7 +1,13 @@
 @import "../var";
-  .products {}
+  .products {
+    * {
+      transition: 0.7s ease-in-out all;
+    }
+  }
   .products-wrap {
-    /*margin-top: 64px;*/
+    @media (max-width:$mobile-bp) {
+      min-width: 343px;
+    }
   }
   .products-heading {
     color: #222222;
@@ -20,6 +26,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 30px;
+
+    @media (max-width:$tablet-bp) {
+      justify-content: center;
+      gap: 16px;
+    }
+
+    @media (max-width:$mobile-bp) {
+      min-width: 343px;
+    }
   }
   .products-overlay {
     position: absolute;
@@ -34,6 +49,10 @@
     transform: scaleY(0);
     transform-origin: center top;
     transition: 0.5s;
+
+    @media (max-width:$tablet-bp) {
+      height: 100%;
+    }
   }
   .btn-add {
     background-color: transparent;
@@ -53,21 +72,51 @@
   }
 
   .products-catalog-card {
-    max-width: 360px;
+    /* max-width: 360px; */
+    width: 31.5%;
     text-align: left;
     background: #F8F8F8;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
+    
+
+    @media (max-width:$tablet-bp) {
+      width: 48%;
+    }
+
+    @media (max-width:$mobile-bp) {
+      width: 100%;
+    }
+  }
+
+  .products-catalog-card-wrap {
+    position: relative;
+    /* display: flex; */
+    & > img {
+      width: 100%;
+      display: block;
+    }
     &:hover .products-overlay {
       /* display: flex; */
       /* opacity: 1; */
       transform: scaleY(1);
     }
   }
+
   .product-catalog-desc-wrap {
       padding: 18px;
+      & > a {
+        text-decoration: none;
+        color: #000000;
+        /* cursor: pointer; */
+        display: inline-block;
+        height: 0px;
+        & > h3:hover {
+          color: $main-color;
+        }
+      }
   }
   .products-card-heading {
     font-size: 13px;
@@ -83,6 +132,9 @@
     color: #5D5D5D; 
     overflow: hidden;
     max-height: 50.4px;
+    /* &:hover {
+      max-height: 200px;
+    } */
   }
   .products-card-price {
     color: #F16D7F;
@@ -91,6 +143,9 @@
     font-weight: 400;
     max-height: 18.4px;
     overflow: hidden;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   
