--- a/css/blocks/_totest.scss
+++ b/css/blocks/_totest.scss
@@ -10,10 +10,21 @@
   display: flex;
   justify-content: space-between;
   min-height: 45px;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 15s ease infinite; */
   font-size: 50px;
+  align-items: center;
+
+  @media (max-width:$tablet-bp) {
+    font-size: 30px;
+  }
+
+  @media (max-width:$mobile-bp) {
+    /* flex-direction: column; */
+    font-size: 15px;
+    min-width: 343px;
+  }
 }
 @keyframes gradient {
     0% {
